<resources>
    <string name="app_name">DartApp</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="favourite_doubles">Fav Doubles:</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">New Game</string>
    <string name="add_player">Add Player</string>
    <string name="edit_players">Edit Players</string>
    <string name="update_player">Update Player</string>
    <string name="player_one">Player 1: </string>
    <string name="player_two">Player 2: </string>
    <string name="choose_game">Choose a game</string>
    <string name="game_301">301</string>
    <string name="game_501">501</string>
    <string name="dart_1">Dart 1</string>
    <string name="dart_2">Dart 2</string>
    <string name="dart_3">Dart 3</string>
    <string name="zero">0</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
</resources>