<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dart1"
    tools:context=".GameChoose">

    <Button
        android:id="@+id/button_301"
        style="@style/ButtonStyle"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:text="@string/game_301"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button_501"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <Button
        android:id="@+id/button_501"
        style="@style/ButtonStyle"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:text="@string/game_501"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <TextView
        android:id="@+id/choose_game"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="@string/choose_game"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_301"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>