<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dart1"
    tools:context=".Home">



    <TextView
        android:id="@+id/choose_game"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinnerPlayer1"
        android:layout_width="269dp"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choose_game"
        app:layout_constraintVertical_bias="0.442"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/player_one"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:layout_marginTop="232dp"
        android:paddingTop="10dp"
        android:text="@string/player_one"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choose_game" />

    <TextView
        android:id="@+id/player_two"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/player_two"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <Spinner
        android:id="@+id/spinnerPlayer2"
        android:layout_width="269dp"
        android:layout_height="60dp"
        android:background="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choose_game"
        app:layout_constraintVertical_bias="0.642"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_1id"
        style="@style/ButtonStyle"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:text="@string/start_game"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="87dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choose_game"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btnAddPlayer"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:background="@drawable/round_button"
            android:src="@android:drawable/ic_input_add"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/tvAddPlayerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>