<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dart1"
    tools:context=".AddPlayer">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <EditText
        android:id="@+id/etFavDoubles"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:background="@color/white"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/etNewName"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:background="@color/white"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:id="@+id/tvFavDoubles"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:text="@string/favourite_doubles"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/tvUpdatePlayer"
        android:layout_width="387dp"
        android:layout_height="88dp"
        android:paddingTop="20dp"
        android:text="@string/add_player"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="98dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="87dp"
            android:layout_marginEnd="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnAddData"
                android:layout_width="60dp"
                android:layout_height="56dp"
                android:background="@drawable/round_button"
                android:src="@android:drawable/ic_input_add"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/tvAddPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="86dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnViewData"
                android:layout_width="60dp"
                android:layout_height="56dp"
                android:background="@drawable/round_button"
                android:src="@android:drawable/ic_menu_search"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.354"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.622"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvViewPlayersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="86dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnUpdateData"
                android:layout_width="60dp"
                android:layout_height="56dp"
                android:background="@drawable/round_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.566"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.622"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:ignore="ContentDescription"
                app:tint="@color/lightBlue" />

            <TextView
                android:id="@+id/tvUpdatePlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="86dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBackToHome"
                android:layout_width="60dp"
                android:layout_height="56dp"
                android:background="@drawable/round_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.766"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.622"
                app:srcCompat="@android:drawable/ic_menu_revert"
                tools:ignore="ContentDescription,MissingConstraints"
                app:tint="@color/red"/>

            <TextView
                android:id="@+id/tvViewBackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>